# MakerSpace

./: LICENSE  README.md
00_Setting_Up_GitHub/: README.md
01_OpenAI_playground_for_developers/: README.md
02_Prepare_Session_02_Frontend/: README.md
Session_01_LLM_APIs_&_AI-Assisted_Development/: OpenAI_playground_for_developers.ipynb  README.md  pyproject.toml  results.md
