[project]
name = "aieo1-staging"
version = "0.1.0"
description = "AIEO1 Staging Project"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipython>=8.0.0",
    "notebook>=6.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
